--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel",
+    "name": "josecdavila/aga.io-games-tutorial",
     "description": "Bagario Framework.",
     "keywords": ["framework", "bagario"],
     "license": "MIT",
