--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "josecdavila/aga.io-games-tutorial",
-    "description": "Bagario Framework.",
-    "keywords": ["framework", "bagario"],
+    "name": "taikhoanahrefs/mua-ban-mua-chung-tai-khoan-ahrefs",
+    "description": "Ahrefs Framework.",
+    "keywords": ["framework", "ahrefs"],
     "license": "MIT",
     "type": "project",
     "require": {
